Major changes and POM alignment